# tt-burnin

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
debian/: changelog  control  copyright  debhelper-build-stamp  files
tt_burnin/: __init__.py  chip.py  load_ttx.py  main.py  utils.py
tt_burnin/ttx/: bhpv.ttx  gspv.ttx  whpv.ttx
