[project]
name = "tt-burnin"
version = "0.3.0"
description = "Run high power workload on all connected chips"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  { name = "Daniel Rosen", email = "drosen@tenstorrent.com" }
]
maintainers = [
  { name = "Daniel Rosen", email = "drosen@tenstorrent.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  'tt_tools_common~=1.5',
  'pyluwen~=0.8.0',
  "tomli == 2.0.1; python_version < '3.11'",
  "jsons == 1.6.3",

  # This is a hack to get around the lack of importlib-metadata pre 3.8.
  # Using the 1.4.0 version because 3.8 will be our msv until it is eol.
  "importlib-metadata == 4.11.3; python_version < '3.8'",
]

optional-dependencies.dev = [
  "black == 24.10.0; python_version >= '3.9'",
  "black == 24.8.0; python_version == '3.8'",
  "black == 23.3.0; python_version == '3.7'"
]

[project.urls]
"Homepage" = "http://tenstorrent.com"
"Bug Reports" = "https://github.com/tenstorrent/tt-burnin/issues"
"Source" = "https://github.com/tenstorrent/tt-burnin"

[project.scripts]
tt-burnin = "tt_burnin.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    "ttx/*.ttx"
]

[tool.setuptools.packages.find]
where = [ ".", ]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = [
  "setuptools>=43.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

# vim: expandtab:ts=2:sw=2:ai
